# saytype

./: .gitignore  LICENSE  Package.swift  README.md  pyproject.toml  requirements.txt  saytype.spec
.github/workflows/: ci.yml  release.yml
Sources/SayType/App/: AppState.swift  LaunchAtLogin.swift  ModelManager.swift  SayTypeApp.swift
Sources/SayType/Audio/: AudioEngine.swift
Sources/SayType/Input/: KeystrokeInjector.swift  TextInjector.swift
Sources/SayType/MenuBar/: StatusBarController.swift
Sources/SayType/Onboarding/: OnboardingView.swift  OnboardingWindow.swift
Sources/SayType/Permissions/: PermissionChecker.swift
Sources/SayType/Resources/: AppIcon.icns  Info.plist
Sources/SayType/Transcription/: CommandParser.swift  TranscriptionEngine.swift
scripts/: build-app.sh  build-dmg.sh  dmg-background.tiff
src/saytype/: __init__.py  __main__.py  app.py  check.py  cli.py  engine.py  keys.py
src/saytype/resources/: AppIcon.icns  Info.plist
